# malaria-surveillance-analytics

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: logging_config.py
src/metrics/: collector.py
surveillance/: __init__.py  aggregator.py  schemas.py
surveillance/alerts/: __init__.py  detector.py
surveillance/viz/: __init__.py  flowcharts.py  heatmaps.py  time_series.py
tests/: conftest.py  test_aggregator.py  test_detector.py  test_flowcharts.py  test_integration.py  test_schemas.py  test_time_series_viz.py
