[project]
name = "malaria-surveillance-analytics"
version = "1.0.0"
description = "Malaria surveillance analytics platform with district-level monitoring, visualization, and reporting"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kaushik Sarkar", email = "dr.kaushiks@hotmail.com"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "networkx>=3.2",
    "pydantic>=2.0",
    "click>=8.1",
    "loguru>=0.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "mypy>=1.7", "ruff>=0.1"]
viz = ["pygraphviz>=1.11", "graphviz>=0.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
